Fixed grid items overlapping issue

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -383,7 +383,7 @@ body {
     }
 }
 
-/*isotope js*/
+/*masonry js*/
 .grid {
     margin-left: 5%;
     width: 90%;
@@ -395,7 +395,7 @@ body {
         margin-left: 2.5%;
         padding: 20px;
         margin-right: 2.5%;
-        float: left;
+        //float: left;
 
         a {
             font-family: 'sf-speakeasy';
